stylesheets/_component.forms.scss
/* ... */
.form__link {
    height: $input-height-base;
    line-height: $input-height-base;
}

.form__group > .control__label {
    padding-top: 11px;
    padding-right: 10px;

    // hidden labels need to maintain their position and not break the flow of
    // the form elements
    &.hide {
        position: relative;
    }
}

.form__group--top {
    > .control__label {
        margin-bottom: .5em;
    }

    .controls > .form__control {
        display: inline-block;
    }
}

.legend {
    font-size: $font-size-large;
    margin-bottom: .5em;
}

.form__actions {
    border-top: 1px solid color(border);
    min-height: 60px;
    padding: $line-height-base 0;
    position: relative;

    @include respond-min($screen-desktop) {
        &:not(.form__actions--flush) {
            padding-left: 24.5%;
        }
    }
}

.modal .form__actions {
    border-top: 0;
    min-height: 37px;
    padding: 0;
}

.checkbox-group,
.radio-group {
    .control__label {
        padding-top: 0;
    }

    &.form__group--indent .controls {
        width: 100%;
    }
}

.controls > .toggle-switch-label {
    margin-top: $padding-small-vertical;
}

// default (mobile first) width should be 100%
.form__control {
    background-color: #fafafa;
    width: 100%;
}

@include respond-min($screen-smaller) {

// if no label is provided, the width of form__control will be calculated
// based on the full 12 column grid
// * flush form groups also use the 12 column grid

    // default width
    .form__group .form__control,
    .form__group .form__control + .select2,
    .form__group--flush > .control__label + .controls > .form__control {
        @include col-span(4, false, false, 12);
    }

    // column variations
    @for $i from 1 through 12 {
        .form__control-col--#{$i} .form__control,
        .form__control-col--#{$i} .form__control + .select2,
        .form__group--flush.form__control-col--#{$i} .control__label + .controls > .form__control {
            @include col-span($i, false, false, 12);
        }
    }

// if a (3 col) label is provided, the width of form__control will be calculated
// based on the remaining 9 column grid

    // default width
    .control__label + .controls > .form__control:not(.checkbox),
    .control__label + .controls > .form__control:not(.checkbox) + .select2 {
        @include col-span(4, false, false, 9);
    }

    // column variations
    @for $i from 1 through 9 {
        .form__control-col--#{$i} .control__label + .controls > .form__control,
        .form__control-col--#{$i} .control__label + .controls > .form__control + .select2 {
            @include col-span($i, false, false, 9);
        }
    }

    @each $variant, $width in $input-widths {

        // 1. allow input-specific widths for fine-grained control
        // 2. allow a class on the main group to control the width of it's controls
        .form__control.form__control--#{$variant},
        .form__group--#{$variant}.form__group--#{$variant} .control__label + .controls > .form__control,
        .form__group--#{$variant}.form__group--#{$variant} .control__label + .controls > .form__control + .select2 {
            width: #{$width};
        }
    }

    // input-groups default
    .form__group .input-group {
        @include col-span(4, false, false, 9);
    }

    // input-groups column variations
    @for $i from 1 through 9 {
        .form__group.form__control-col--#{$i} .input-group {
            @include col-span($i, false, false, 9);
        }
    }

    // input-groups legacy sizes
    @each $variant, $width in $input-widths {
        .form__group.form__group--#{$variant} .input-group {
            width: #{$width};
        }
    }

    .form__group .input-group .form__control {
        width: 100%;
    }
}

// validation

.form__group {
  &.has-changed {
    @include form__control-validation($state-info-text, color(info), $state-info-bg);
  }

  &.has-warning {
    @include form__control-validation($state-warning-text, color(warning), $state-warning-bg);
  }

  &.has-error {
    @include form__control-validation($state-danger-text, color(danger), $state-danger-bg);
  }

  &.has-success {
    @include form__control-validation($state-success-text, color(success), $state-success-bg);
  }
}

.help-block {
    clear: both;
    color: color(text, help);
    display: block;
    font-size: $font-size-small;
}

// if a control label is in the help block (like a bare input) it doesn't need
// the extra padding
.help-block > .control__label {
    padding: 0;
}

// if help block is next to the main label, space it appropriately
.form__group > .control__label + .help-block {
    margin: -.5em 0 .5em;
}

.form__button-group {

    > .control__label {
        padding-top: 3px;
    }

    .controls > .control__label {
        @extend .btn;
    }

    .controls > .control__label:not(:first-of-type) {
        margin-left: -1px;
    }

    // Position elements outside of the container as display:none or
    // visibility:hidden causes the inputs to stop being interactive in IE8
    .form__control {
        left: -9999px;
        position: absolute;
        top: 0;
    }

    .form__control:checked + .control__label {
        @extend .btn:active;
    }

    .btn__group {
        vertical-align: top;
    }
}

// Loading spinner (mainly for select/select2 elements)
.form__control + .loading {
  left: 310px;
}

// Paragraph as first child of .controls, assuming absence of a proper input
.controls > p:first-child {
    margin-bottom: 0;
    min-height: 44px;
    padding-top: 12px;
}

.required-indicator {
    display: inline-block;
    font-size: 1.2em;
    text-align: center;
    width: 10px;
}

.form__group.form-checkbox .form__control.checkbox,
.form__group.form-radio .form__control.radio {
    margin-top: 17px;
    width: auto;
}
/* ... */

